[FIX] - scrollbar

--- a/BudgetMonitoringTL/src/index.css
+++ b/BudgetMonitoringTL/src/index.css
@@ -300,7 +300,7 @@ input[type="checkbox"] {
   overflow: hidden;
 }
 
-/* sidebar */
+/* table with sidebar */
 .sidebar {
   width: 250px;
   height: 100vh;
@@ -314,23 +314,42 @@ input[type="checkbox"] {
 
 .table-container {
   flex: 1;
-  /* height: calc(100vh - 120px);  */
   height: 74vh;
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 .custom-table {
   width: 100%;
   border-collapse: collapse;
+  display: block;
 }
 
 .custom-table thead {
-  /* border: 2px solid black; */
   position: sticky;
   top: 0;
   background-color: white;
   z-index: 2;
+  display: block;
+  width: 100%;
+}
+
+.custom-table tbody {
+  display: block;
+  max-height: 70.5vh;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.custom-table th,
+.custom-table td {
+  min-width: 120px;
+  text-align: center;
+}
+
+.custom-table tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
 }
 
 .sidebar.closed {
@@ -438,6 +457,30 @@ pre {
   white-space: pre-wrap;
   word-wrap: break-word;
   text-align: center;
+}
+
+/* webkit scrollbar */
+::-webkit-scrollbar {
+  width: 7px;
+  background-color: #a11b1b;
+}
+
+/* track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  height: 10%;
+}
+
+/* handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background-color: rgb(219, 219, 219);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  border-right: none;
+  border-left: none;
 }
 
 /* react-to-print */
